@@ -5,9 +5,10 @@
 
 ## Description 
 This program using a javafx UI and a Python script to find your exams schedule for Dalhousie Hallifax campus. 
-Ex: Faculty can be CSCI Course Number can be 3136
+It also handles users in put for errors like in the example below 
+![alt text](https://github.com/awilson02/typingSpeed/blob/master/image/image.PNG)
 
-##Resources
+## Resources
 
 This project uses 
 
@@ -17,3 +18,10 @@ This project uses
 * Python's bs4 (BeautifulSoup)
 * Python's Textwrap 
 * Link for where exams are found https://www.dal.ca/academics/exam_schedule/halifax_campus_exam_schedule.html
+
+## To Run 
+* Put Jar and javafx-sdk-15.0.1 and the ExamScheduleScraper in same directory
+* type command 
+    java --module-path "javafx-sdk-15.0.1\lib" --add-modules javafx.controls,javafx.fxml -jar ExamScheduleScraper.jar
+    
+* make python and java are setup 
